added stats + edited prospect back template

--- a/templates/back/prospect/welcome_prospect.html.twig
+++ b/templates/back/prospect/welcome_prospect.html.twig
@@ -1,6 +1,6 @@
 <p>Bonjour,</p>
 
-<p>Nous sommes ravis de vous compter parmi nos contacts. Chez ScriptZenit, nous offrons des solutions innovantes dans les domaines du développement web et des technologies personnalisées.</p>
+<p>Nous sommes ravis de vous compter parmi nos contacts. Chez ScriptZenIT, nous offrons des solutions innovantes dans les domaines du développement web et des technologies personnalisées.</p>
 
 <p>Découvrez plus sur nos services et comment nous pouvons aider votre entreprise à se développer :</p>
 
@@ -19,4 +19,4 @@
 
 <p>Merci et à très bientôt,</p>
 
-<p>L'équipe ScriptZenit</p>
+<p>L'équipe ScriptZenIT</p>
