--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -200,7 +200,8 @@
 					}
 				})
 			</script>
-		{% endblock %}
 
+			<script defer src="https://stats.youss.dev/script.js" data-website-id="2f81360d-92bc-460b-bcd6-81ba64683e42"></script>
+		{% endblock %}
 	</body>
 </html>
