--- a/public/css/front/css/form_call_back.css
+++ b/public/css/front/css/form_call_back.css
@@ -56,9 +56,9 @@ body {
         margin-bottom: 1.5rem;
     }
 
-    .btn {
+    /* .btn {
         font-size: 1.25rem;
-    }
+    } */
 }
 
 .bg-form{
