--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -22,7 +22,7 @@
                 <p class="col-lg-10 fs-4 text-light">
                     Rejoignez les entreprises visionnaires qui transforment leur présence numérique avec ScriptzenIT. En choisissant notre expertise en développement web et gestion numérique, vous accédez à une suite d'outils avancés pour surveiller vos applications en temps réel, optimiser vos performances, et garantir une disponibilité continue.
                 </p>
-                <div class="d-flex">
+                <div class="d-flex justify-content-center">
                     <a href="{{ url('front_contact') }}" class="btn-primary text-black">Contacter l'agence</a>
                     <a href="{{ url('front_devis_new')}}" class="btn-secondary text-black">Je veux me faire accompagner</a>
                 </div>
