--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
 		<link rel="stylesheet" href="{{ asset('css/front/css/new.css') }}">
 		<link rel="stylesheet" href="{{ asset('css/front/css/app.css')}}">
 		<link rel="stylesheet" href="{{ asset('css/front/css/canvas_style.css') }}">
-		<link rel="stylesheet" href="{{ asset('css/front/css/servces.css') }}">
+		<link rel="stylesheet" href="{{ asset('css/front/css/services.css') }}">
 		
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
