--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -22,7 +22,7 @@
 						{{ render(controller('App\\Controller\\Front\\FrontController::search')) }}
 					</div>
 					<div>
-						<a href="{{ url('front_Subjects_new') }}" class="button button-large border border-width-2 bg-alt py-2 rounded-1 fw-medium text-transform-none ls-0 ms-0 ms-sm-1 h-op-09"><i class="bi-file-earmark-plus"></i>Créer un nouveau sujet</a>
+						<a href="{{ url('front_subjects_new') }}" class="button button-large border border-width-2 bg-alt py-2 rounded-1 fw-medium text-transform-none ls-0 ms-0 ms-sm-1 h-op-09"><i class="bi-file-earmark-plus"></i>Créer un nouveau sujet</a>
 						<a href="{{ url('front_subject') }}" class="button button-large button-border rounded-1 fw-medium text-transform-none h-bg-alt ls-0 ms-0"><i class="bi-text-left"></i>Voir tous les sujets</a>
 					</div>
 				</div>
@@ -51,7 +51,7 @@
 				<div class="row justify-content-center text-center mb-5">
 					<div class="col-xl-6 col-lg-8">
 						<h3 class="display-4 fw-bolder mb-3">Dernières discussion</h3>
-						<a href="{{ url('front_Subjects_new') }}" class="button button-small button-border button-rounded  mx-0">Créer un nouveau sujet</a>
+						<a href="{{ url('front_subjects_new') }}" class="button button-small button-border button-rounded  mx-0">Créer un nouveau sujet</a>
 					</div>
 				</div>
 
