wip adding support

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,6 +73,13 @@
 					</div>
 				</section>#}
 
+				<div class="container">
+					{% for type, messages in app.flashes %}
+						{% for message in messages %}
+							<div class="alert alert-{{ type }}">{{ message }}</div>
+						{% endfor %}
+					{% endfor %}
+				</div>
 				{% block content %} {% endblock %}
 
 				{% include "front/includes/footer.html.twig" %}
