--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -52,6 +52,7 @@
 					<div class="col-xl-6 col-lg-8">
 						<h3 class="display-4 fw-bolder mb-3">Dernières discussion</h3>
 						<a href="{{ url('front_subjects_new') }}" class="button button-small button-border button-rounded  mx-0">Créer un nouveau sujet</a>
+						<a href="{{ url('front_subject_list') }}" class="btn btn-primary">Voir tous les sujets</a>
 					</div>
 				</div>
 
