--- a/templates/front/subject/index.html.twig
+++ b/templates/front/subject/index.html.twig
@@ -8,6 +8,7 @@
 		<div class="container text-center">
 			<hr>
 			<a href="{{ url('front_subjects_new') }}" class="btn btn-secondary">Écrire au support</a>
+			<a href="{{ url('front_subject_list') }}" class="btn btn-primary">Voir tous les sujets</a>
 		</div>
 	</div>
 
