--- a/templates/front/subject/list.html.twig
+++ b/templates/front/subject/list.html.twig
@@ -35,7 +35,7 @@
                     </div>
                 </div>
             {% else %}
-                <div class="alert alert-info mt-4" role="alert">
+                <div class="alert mt-4" role="alert">
                     <h4 class="alert-heading">Aucun sujet trouvé</h4>
                     <p>Il n'y a actuellement aucun sujet dans le centre de support. Vous pouvez être le premier à en créer un !</p>
                     <hr>
